<resources>
    <string name="app_name">Basics Of Islam</string>
    <string name="Inters" translatable="false">ca-app-pub-2868811788162661/6313921516</string>
    <string name="APP_ID" translatable="false">ca-app-pub-2868811788162661~6505493207</string>
    <string name="alert" translatable="false">Basic language of this app is english and all
        other translation are done with automated tools which may have some contextual mistakes.
        Please refer to english if there are some confusions</string>
    <string name="WhenWakingUp">When Waking Up</string>
    <string name="wearinggarment">When wearing new Garment</string>
    <string name="someonewearnewgar">Said to someone wearing new Garment </string>
    <string name="beforeundress">Before Undressing</string>
    <string name="beforetoilet">Before Entering Toilet</string>
    <string name="leavingtoilet">After Leaving Toilet</string>
    <string name="startablution">When Starting ablution</string>
    <string name="completeablution">Upon Completing ablution</string>
    <string name="leavinghome">When Leaving Home</string>
    <string name="enteringhome">Upon Entering Home</string>
    <string name="goingtomosque">When Going To Mosque</string>
    <string name="enteringmosque">Upon Entering Mosque</string>
    <string name="leavemosque">Leaving Mosque</string>
    <string name="azan">After Azan</string>
    <string name="aftertakbeer">Start of Prayer (After Takbeer)</string>
    <string name="rukooa">During Rukooaa (Bowing)</string>
    <string name="risingrukoo">Upon Rising from Rukooa</string>
    <string name="duringsujood">During Sujood (Prostrating)</string>
    <string name="betweensujood">Between Two Sujood</string>
    <string name="afterrecquran">Sujood After reciting Quran</string>
    <string name="tashahhud">The Tashahhud</string>
    <string name="aftertashahhud">Prayers after Tashahhud</string>
    <string name="beforesalam">After last Tashahhud and before salam</string>
    <string name="aftersalam">Remembrance After Salam</string>
    <string name="istikhara">Dua For Istikhara</string>
    <string name="inmornandeve">In Moring and Evening</string>
    <string name="beforesleeping">Before Sleeping</string>
    <string name="duringturningnight">During Turning over in night</string>
    <string name="feelingunrestsleep">Upon feeling unrest and fear during sleep</string>
    <string name="upondream">Upon seeing a dream</string>
    <string name="qunootalwitr">Qunoot-Al-Witr</string>
    <string name="aftersalamofwitr">After salam of witr</string>
    <string name="foranxiety">For Anxiety and Sorrow</string>
    <string name="oneindistress">For one in Distress</string>
    <string name="encounteringenemy">Upon encountering and enemy</string>
    <string name="doubtinfaith">For on having doubt in faith</string>
    <string name="settleadebt">When settling a debt</string>
    <string name="whisperinginprayer">When affected by whispering during prayer or Recitation</string>
    <string name="affairsdifficult">Dua when affairs become difficult</string>
    <string name="sin">Upon Committing a sin</string>
    <string name="expelldevil">For expelling devil and his whispering</string>
    <string name="mishap">Supplication when stricken with a mishap or overtaken by an affair</string>
    <string name="childrenprotec">Placing children under Allah\'s protection</string>
    <string name="visitingsic">When visiting sick</string>
    <string name="sickexcel">Excellence of visiting sick</string>
    <string name="losthopeforlife">Dua for sick who lost hope for life</string>
    <string name="instforoneneardeath">Instructions for one near death</string>
    <string name="affectedcalamity">When affected by calamity</string>
    <string name="closingeyesofdeceased">When closing eyes of deceased</string>
    <string name="atfuneral">At funeral</string>
    <string name="market">When entering market</string>
    <string name="wakedua1" translatable="false">اَلْحَمْدُ لِلَّهِ الَّذي أَحْيَانَا بَعْدَ مَا أَمَاتَنَا وَإِلَيْهِ النُّشُورُ</string>
    <string name="tr1">All praise is for Allah who gave us life after having taken it from
        us and unto Him is the resurrection.</string>
    <string name="tc2" translatable="false">لا إلهَ إلاّ اللّه وحدَهُ لا شريكَ لهُ، لهُ المُلْـكُ ولهُ الحَمْـد،
        يُحْيـي وَيُميـتُ وَهُوَ حَيٌّ لا يَمـوت،
        بِيَـدِهِ الْخَـيْرُ وَهوَ على كلّ شيءٍ قدير</string>
    <string name="trcase2">None has the right to be worshipped except Allah,
        alone, without partner, to Him belongs all sovereignty and praise.
        He gives life and causes death, and He is living and does not die.
        In His hand is all good and He is over all things, omnipotent.</string>
    <string name="dc1" translatable="false">اللَّهُمَّ لَكَ الحَمدُ أَنْتَ كَسَوْتَنِيهِ، أَسْأَلُكَ مِنْ خَيْرِهِ وَخَيْرِ مَا صُنِعَ لَهُ، وَأَعُوذُ بِكَ مِنْ شَرِّهِ وَشِّرِ مَا صُنِعَ لَهُ</string>
    <string name="tc1">O Allah, for You is all praise, You have clothed me with it
        (i.e. the garment), I ask You for the good of it and the good for which it
        was made, and I seek refuge with You from the evil of it and the evil for which it was made. </string>
    <string name="dc3" translatable="false">تُبْلِي وَيُخْلِفُ اللَّهُ</string>
    <string name="tc3">May Allah prolong your life so that this clothing become old
        and may Allah give you other clothing after this.</string>
    <string name="dc4" translatable="false">بِسْمِ الله</string>
    <string name="tc4">In the name of Allah.</string>
    <string name="dc5" translatable="false">(بِسْمِ الله ) اللّهُـمَّ إِنِّـي أَعـوذُ بِـكَ مِـنَ الْخُـبْثِ وَالْخَبائِث</string>
    <string name="tc5">(In the name of Allah). O Allah, I take refuge with you from all evil and evil-doers.</string>
    <string name="ablution_explain">This is based on the following: Says Allah, If you are sexually impure,
        cleanse yourselves, that is, perform ghusl, and They ask you concerning menstruation.
        Say: \'It is an illness, so leave women alone at such times and go not in unto them
        until they are cleansed, that is, until they perform ghusl. The proof that cleansing
        means ghusl is in the verse, O you who believe, draw not unto the prayer when you are
        drunk until you know what you utter, nor when you are polluted, save when journeying
        upon the road, until you have bathed (taghtasilu). This shows that ghusl, the washing
        of all bodily parts, is meant.</string>
    <string name="ghusl1">According to the practice of the Prophet, upon whom be peace, the
        correct manner of performing ghusl is:</string>
    <string name="gusl2">01. Wash both hands three times.</string>
    <string name="ghus3">02. Wash the private parts.</string>
    <string name="ghus4">03. Make a complete ablution (like the one made for prayer—the
        Prophet used to delay washing his feet until the end of his ghusl if he was using a
        tub, and so on),</string>
    <string name="ghus05">04. Rub water through one\'s hair three times, letting the water
        reach down to the roots of the hair,</string>
    <string name="ghus7">05. Pour water over the entire body, beginning with the right side,
        then the left, washing under the armpits, inside the ears, inside the navel, inside
        the toes and whatever part of the body can be easily rubbed.</string>
    <string name="ghus8">This account is based on the following report from
        \'Aishah: When the Prophet, upon whom be peace, took his bath after
        sexual intercourse, he would begin by washing his hands. Then he would pour
        water from his right hand to his left and wash his sexual organs, make the ablution
        for prayer, take some water and put his fingers to the roots of his hair to the extent
        that he sees that the skin is wet, then pour water over his head three times and then
        over the rest of his body.</string>
    <string name="ghus9">In one narration it states, He used to rub his head with his hands
        until he was certain the water reached his skin, and then he poured water over it three times.
        It is also related that she said, When the Prophet would perform ghusl after having had sexual
        intercourse, he would call for some water, which he would pour on his right hand to wash the
        right side of his head and then the left.</string>
    <string name="ghus10">He would then take water with both hands and pour it over his head.
        Said Maimunah, I put water out for the Messenger of Allah to perform ghusl.
        He washed his hands two or three times, and then he poured water from his
        right hand to his left and washed his private parts, wiped his hands on the
        earth, rinsed his mouth and nose, washed his face and hands, washed his head
        three times, poured water over his body, and finally moved from his place and washed
        his feet. I brought him a towel, but he did not take it, for he shook the water off
        with his hands.</string>
    <string name="wudu">Since Islam teaches us that intention forms the basis of any action,
        it is necessary that, before you perform Wudu, you make the niyyat or intention for it.
        This will not be a verbal act - you only have to mentally prepare yourself for an act that
        will cleanse and purify you.</string>
    <string name="wudu1">Recite bismi-llāhi ar-raḥmāni ar-raḥīmi (In the name of Allah, the most Gracious,
        the most Merciful).</string>
    <string name="wudu2">Completely wash your right hand three times with clean water,
        then move on to the left and repeat. When washing, remember not to miss any part of the hands -
        wash between the fingers and thumb, too.</string>
    <string name="wudu3">Take water in your right palm and rinse your mouth with it, thrice.
        Do not swallow the water on purpose, but spit it out every time.</string>
    <string name="wudu4">Using your right hand, carefully and gently put water into your nostrils,
        before exhaling it. Perform this step three times.</string>
    <string name="wudu5">Thoroughly wash your face, beginning from the hairline on your forehead
        and from one ear to the other. This step, too, must be performed three times.</string>
    <string name="wudu6">Begin with your right hand. Wet it with water, and wash from your wrist
        up to your elbow. Repeat thrice; then do the same to your left arm.</string>
    <string name="wudu7">Usually, Masah refers to the religious act of cleaning one\'s head, in a
        specific way, with a small amount of water. For performing Masah, wet your hands and place
        your palms, flat, on the top of your head (where the hairline begins). Wipe them to the back
        of your neck, and then back again to the front. Now wet the back of both ears
        by placing your thumbs behind them. Use your index and middle fingers to wash
        the front and back of your ears. Masah is done only once.</string>
    <string name="wudu8">Start with your right foot. Wash it thrice from the toes,
        up to the ankles. Make sure you wash between your toes, too. Do the same to your left foot.
        Remember: Once Wudu is performed, it does not need to (but can) be performed
        again until it is invalidated.</string>
    <string name="bannerid" translatable="false">ca-app-pub-2868811788162661/8748513167</string>
    <string name="quooadtext" translatable="false">If the required number of Rakats is two the salat would proceed to next recitaion.</string>
    <string name="quood" translatable="false">Quood</string>
    <string name="play_tashhad" translatable="false">Play Tashhad</string>
    <string name="durood_ibraheem" translatable="false">Durood Ibraheem</string>
    <string name="play_dua" translatable="false">Play Dua</string>
</resources>