<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Quood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/quood"
            android:contentDescription="@string/quood" />

        <ImageButton
            android:id="@+id/playattheyat"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/playbuttn"
            android:contentDescription="@string/play_tashhad" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/quooadtext"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/quooda"
            android:contentDescription="@string/quood" />

        <ImageButton
            android:id="@+id/playdurrodibraheem"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/playbuttn"
            android:contentDescription="@string/durood_ibraheem" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/quoodb"
            android:contentDescription="@string/durood_ibraheem" />

        <ImageButton
            android:id="@+id/playrabjaelni"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/playbuttn"
            android:contentDescription="@string/play_dua" />


    </LinearLayout>


</ScrollView>